# FlexSearch

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  analytics.py  auth.py  chat.py  documents.py  projects.py  retrieval.py  sessions.py
backend/app/core/: __init__.py  config.py  dependencies.py  security.py
backend/app/db/: __init__.py  models.py  postgres.py  redis.py
backend/app/rag/: __init__.py  pipeline.py
backend/app/rag/chunking/: __init__.py  base.py  fixed_window.py  parent_child.py  recursive.py  semantic.py
backend/app/rag/embedding/: __init__.py  local.py
backend/app/rag/ingestion/: __init__.py  base.py  ocr.py  vlm.py
backend/app/rag/reranking/: __init__.py  base.py  cross_encoder.py  none.py
backend/app/rag/retrieval/: __init__.py  base.py  dense.py  hybrid.py  parent_child.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  document.py  project.py  retrieval.py  session.py
backend/app/services/: __init__.py  llm.py  storage.py  token_tracker.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_projects.py  test_retrieval.py
docker/: docker-compose.yml
docs/: api.md  deployment.md
frontend/: .env.example  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Markdown.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/layouts/: main-layout.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: admin.tsx  chat.tsx  dashboard.tsx  index.ts  project-detail.tsx  projects.tsx  settings.tsx
frontend/src/pages/auth/: login.tsx  register.tsx
frontend/src/stores/: auth.ts  project.ts
