[project]
name = "flexsearch-backend"
version = "0.1.0"
description = "High-Performance, Local-First Modular RAG Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    
    # Redis
    "redis>=5.0.1",
    
    # Vector Store
    "qdrant-client>=1.7.0",
    
    # Object Storage
    "minio>=7.2.3",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # LLM
    "litellm>=1.30.0",
    
    # Embeddings
    "sentence-transformers>=2.3.1",
    
    # Document Processing
    "pypdf>=4.0.1",
    "pytesseract>=0.3.10",
    "pillow>=10.2.0",
    "pdf2image>=1.17.0",
    
    # Configuration
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    
    # Utilities
    "httpx>=0.26.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
